--- a/style.css
+++ b/style.css
@@ -123,13 +123,14 @@ li{
 
 .study {
       position: relative;
+      
       overflow: hidden;
       height: 3rem;
       padding: 0 2rem;
       border-radius: 1.5rem;
       background: #3d3a4e;
       background-size: 400%;
-      color: #fff;
+      color: white;
       border: none;
       cursor: pointer;
     }
